--- a/requirements.txt
+++ b/requirements.txt
@@ -5,11 +5,7 @@ numpy==1.26.4
 pandas==2.1.4
 matplotlib==3.7.5
 scikit-learn==1.5.0
-tqdm==4.66.4
 tabulate==0.9.0
-Pillow==10.2.0
-IPython==8.25.0
 spacy==3.7.5
-nltk==3.9.1
-contractions==0.1.73
-gensim==4.3.3
+datasets==3.0.1
+torchtext==0.18.0
